# wxRust

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  rust-bindgen.patch
src/: _unsafe.rs.prefix  codegen.py  lib.rs
tests/: macros.rs  test.rs
